Fix SSRF vulnerability